# waiot

./: .gitignore  .gitmodules  DESIGN.md  LICENSE  README.md
docs/: aot_compile_wasm.md
src/core/: http.c  http.h  log.h  pinmap.c  pinmap.h  platform_thread.h  wamr.c  wamr.h  wasi.h
src/embedded-hal-wasm/: Cargo.toml  README.md  camera_and_detect.aot  camera_transfer.aot
src/embedded-hal-wasm/.cargo/: config-big-init-memory.toml  config-big-stack.toml  config.toml
src/embedded-hal-wasm/examples/: README.md  camera.rs  camera_and_detect.rs  camera_and_detect_send565.rs  camera_transfer.rs  camera_transfer_espeyes3.rs  camera_transfer_jpg.rs  digital.rs  hello_http_client.rs  hello_log.rs  i2c.rs  ledc.rs  log.rs  m5.rs  pedestrian.ppm  pedestrian_224.rgb8  people.rgb8  wasi_nn.rs  wasi_nn_esp_dl.rs
src/embedded-hal-wasm/src/: delay.rs  digital.rs  esp.rs  http_client.rs  i2c.rs  ledc.rs  lib.rs  logging.rs  pwm.rs  wasi_nn.rs
