[package]
name = "embedded-hal-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = {version = "1.24.0", default-features = false}
embedded-hal = "1.0.0"
embedded-sht3x = "0.1.0"
heapless = { version = "0.8", features = ["ufmt"] }
libm = "0.2.16"
panic-halt = "1.0.0"
spin = "0.10.0"
ufmt = "0.2.0"
ufmt_float = "0.2.0"
tjpgdec-rs = { version = "0.4", default-features = false }